# uw-cse341

./: .gitignore  README.md
homework/hw0/: hw0.ml
homework/hw1/: hw1.ml
homework/hw2/: hw2.ml  hw2challenge.ml  hw2test.ml
homework/hw3/: dune  hw3.ml  hw3test.ml  hw3types.ml
homework/hw4/: dune  hw4.ml  hw4.mli  hw4test.ml  hw4types.ml
homework/hw5/src/: ast.ml  ast_types.ml  dune  interpreter.ml  pst.ml  trefoil2.ml  trefoil2test.ml
homework/hw6/src/: ast.ml  ast_types.ml  dune  hw6.trefoil  interpreter.ml  interpreter_types.ml  newtests.ml  pstparser.ml  trefoil3.ml  trefoil3test.ml
homework/hw7/hw7/src/: ast-starter.ml  ast_types.ml  interpreter-starter.ml  newtests.ml
homework/hw7/src/: ast.ml  ast_types.ml  dune  interpreter.ml  trefoil4.ml  trefoil4test.ml
lecture/week00/: lec01-live.ml  lec02-live.ml
lecture/week01/: lec03.ml
section/week01/: code.ml  exam-prep.ml
