(executable
 (name trefoil4)
 (libraries trefoil4lib)
 (modules trefoil4))

(library
 (name trefoil4lib)
 (modules errors ast pst pstparser interpreter ast_types)
 (preprocess
  (pps ppx_deriving.show)))

(library
 (name trefoil4test)
 (modules trefoil4test)
 (libraries trefoil4lib)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
